<resources>
    <string name="app_name">Polizi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="check_in">Check in</string>
    <string name="create_user">Create User</string>
    <string name="login">Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="retype_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="designation">Designation</string>
    <string name="police_station">Police Station</string>
    <string name="user_name_invalid">Enter valid User Name</string>
    <string name="user_name_empty">Enter User Name</string>
    <string name="password_empty">Enter Password</string>
    <string name="retype_password_empty">Enter Confirm Password</string>
    <string name="name_empty">Enter Name</string>
    <string name="name_invalid">Enter a valid Name</string>
    <string name="mobile_number_empty">Enter Mobile Number</string>
    <string name="address_empty">Enter Address</string>
    <string name="designation_empty">Enter Designation</string>
    <string name="police_station_empty">Enter Police Station</string>
    <string name="password_mismatch">Passwords do no not match</string>
    <string name="incorrect_login_credentials">Username or Password incorrect</string>
    <string name="logout">Logout</string>
    <string name="call_backup">Call Backup</string>
    <string name="backup_count">Unit size</string>
    <string name="backup_message">Unit message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_display_notification">DisplayNotification</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string-array name="template_msg">
        <item>Need Help</item>
        <item>Emergency Here</item>
        <item>Suspect Found</item>
        <item>Need backup ASAP</item>
        <item>Medical Emergency here</item>
    </string-array>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
